# Telecom-Assistant

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  test_routing.py  ww.md
agents/: billing_agents.py  knowledge_agents.py  network_agents.py  service_agents.py
config/: config.py
data/documents/: demo.txt
data/vector_store/: default__vector_store.json  docstore.json  index_store.json
orchestration/: graph.py  state.py
ui/: streamlit_app.py
utils/: database.py  document_loader.py
